[gd_scene load_steps=19 format=2]

[ext_resource path="res://Menus/NextDayScreen.gd" type="Script" id=1]
[ext_resource path="res://Assets/MenuAssets/upgrade_disabled.png" type="Texture" id=2]
[ext_resource path="res://Assets/MenuAssets/upgrade_not_pressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/MenuAssets/upgrade_pressed.png" type="Texture" id=4]
[ext_resource path="res://Assets/MenuAssets/upgrade_hover.png" type="Texture" id=5]
[ext_resource path="res://Assets/MenuAssets/Continue_pressed.png" type="Texture" id=6]
[ext_resource path="res://Assets/MenuAssets/Continue_hover.png" type="Texture" id=7]
[ext_resource path="res://Assets/MenuAssets/continue_not_pressed.png" type="Texture" id=8]
[ext_resource path="res://Assets/MenuAssets/Home_hover.png" type="Texture" id=9]
[ext_resource path="res://Assets/MenuAssets/Home_pressed.png" type="Texture" id=10]
[ext_resource path="res://Assets/MenuAssets/Home_not_pressed.png" type="Texture" id=11]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/IndieFlower-Regular.ttf"

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/IndieFlower-Regular.ttf"

[sub_resource type="DynamicFont" id=4]
size = 20
font_data = SubResource( 3 )

[sub_resource type="DynamicFontData" id=5]
font_path = "res://Assets/IndieFlower-Regular.ttf"

[sub_resource type="DynamicFont" id=6]
size = 35
font_data = SubResource( 5 )

[sub_resource type="DynamicFont" id=7]
size = 25
font_data = SubResource( 5 )

[node name="NextDayScreen" type="ColorRect"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0117647, 0.545098, 0.372549, 1 )
script = ExtResource( 1 )

[node name="DayCompletedLbl" type="Label" parent="."]
margin_left = 24.0
margin_top = 22.0
margin_right = 109.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "Day "

[node name="ColorRect" type="ColorRect" parent="DayCompletedLbl"]
margin_top = 85.0
margin_right = 426.0
margin_bottom = 357.0
color = Color( 0.360784, 0.360784, 0.360784, 1 )

[node name="totalOverallLbl" type="Label" parent="DayCompletedLbl/ColorRect"]
visible = false
margin_left = 27.0
margin_top = 35.0
margin_right = 155.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 4 )
text = "Total Deliveries overall: :"

[node name="totalOverallLbl2" type="Label" parent="DayCompletedLbl/ColorRect/totalOverallLbl"]
margin_left = 290.0
margin_right = 332.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "10000"

[node name="totoalTDayLbl" type="Label" parent="DayCompletedLbl/ColorRect"]
margin_left = 27.0
margin_top = 65.0
margin_right = 225.0
margin_bottom = 95.0
custom_fonts/font = SubResource( 4 )
text = "Total Deliveries today: "

[node name="totoalTDayLbl2" type="Label" parent="DayCompletedLbl/ColorRect/totoalTDayLbl"]
margin_left = 290.0
margin_right = 332.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "1000"

[node name="citaionsLbl" type="Label" parent="DayCompletedLbl/ColorRect"]
margin_left = 27.0
margin_top = 95.0
margin_right = 225.0
margin_bottom = 125.0
custom_fonts/font = SubResource( 4 )
text = "Citations: "

[node name="citaionsLbl2" type="Label" parent="DayCompletedLbl/ColorRect/citaionsLbl"]
margin_left = 290.0
margin_right = 332.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "1000"

[node name="GPlyaerBonusLbl" type="Label" parent="DayCompletedLbl/ColorRect"]
margin_left = 27.0
margin_top = 125.0
margin_right = 225.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 4 )
text = "Good Player Bonus: "

[node name="GPlyaerBonusLbl2" type="Label" parent="DayCompletedLbl/ColorRect/GPlyaerBonusLbl"]
margin_left = 290.0
margin_right = 332.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "No"

[node name="MoneyEarned" type="Label" parent="DayCompletedLbl/ColorRect"]
margin_left = 27.0
margin_top = 201.0
margin_right = 225.0
margin_bottom = 231.0
custom_fonts/font = SubResource( 4 )
text = "Money Earned Today:"

[node name="MoneyEarned" type="Label" parent="DayCompletedLbl/ColorRect/MoneyEarned"]
margin_left = 290.0
margin_right = 332.0
margin_bottom = 30.0
custom_fonts/font = SubResource( 4 )
text = "Nodfgdfg"

[node name="Shoppe" type="ColorRect" parent="."]
margin_left = 470.0
margin_top = 22.0
margin_right = 979.0
margin_bottom = 379.0
color = Color( 0.254902, 0.32549, 0.415686, 1 )

[node name="Label" type="Label" parent="Shoppe"]
margin_left = 18.0
margin_top = 13.0
margin_right = 126.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 6 )
text = "Shoppe"

[node name="LblCurrentMoney" type="Label" parent="Shoppe"]
margin_left = 155.0
margin_top = 13.0
margin_right = 370.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 6 )
text = "Current money:"

[node name="TranmissionLbl" type="Label" parent="Shoppe"]
margin_left = 29.0
margin_top = 85.0
margin_right = 194.0
margin_bottom = 123.0
custom_fonts/font = SubResource( 7 )
text = "Transmission: $"

[node name="transmission_upgrade_btn" type="TextureButton" parent="Shoppe/TranmissionLbl"]
margin_left = 280.0
margin_top = -5.0
margin_right = 360.0
margin_bottom = 35.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 2 )

[node name="EngineLbl" type="Label" parent="Shoppe"]
margin_left = 29.0
margin_top = 137.0
margin_right = 194.0
margin_bottom = 175.0
custom_fonts/font = SubResource( 7 )
text = "Engine: $"

[node name="EngineUpgradeBtn" type="TextureButton" parent="Shoppe/EngineLbl"]
margin_left = 280.0
margin_right = 360.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 2 )

[node name="UpgradeCarLbl" type="Label" parent="Shoppe"]
visible = false
margin_left = 29.0
margin_top = 240.0
margin_right = 194.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 7 )
text = "Upgrade Car:"

[node name="UpgradeCarBtrn" type="TextureButton" parent="Shoppe/UpgradeCarLbl"]
margin_left = 142.0
margin_right = 222.0
margin_bottom = 40.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )
texture_disabled = ExtResource( 2 )

[node name="HomeBtn" type="TextureButton" parent="."]
modulate = Color( 1, 1, 1, 0.658824 )
margin_left = 933.0
margin_top = 338.0
margin_right = 973.0
margin_bottom = 377.0
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 10 )
texture_hover = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="ContinueBtn" type="TextureButton" parent="."]
margin_left = 664.0
margin_top = 348.0
margin_right = 792.0
margin_bottom = 388.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 7 )

[connection signal="pressed" from="Shoppe/TranmissionLbl/transmission_upgrade_btn" to="." method="_on_transmission_upgrade_btn_pressed"]
[connection signal="pressed" from="Shoppe/EngineLbl/EngineUpgradeBtn" to="." method="_on_EngineUpgradeBtn_pressed"]
[connection signal="pressed" from="Shoppe/UpgradeCarLbl/UpgradeCarBtrn" to="." method="_on_UpgradeCarBtrn_pressed"]
[connection signal="pressed" from="HomeBtn" to="." method="_on_HomeBtn_pressed"]
[connection signal="pressed" from="ContinueBtn" to="." method="_on_ContinueBtn_pressed"]
